# reference-sdk

./: CONTRIBUTING.md  LICENSE  README.md
python/: README.md  pyproject.toml
python/examples/: README.md  gemini_grounded_chat.py  sample-factbook-v0.2.yaml  sample-factbook.yaml
python/factlet/: __init__.py
python/tests/: test_basic.py
typescript/: README.md
