[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "factlet"
version = "0.2.1"
description = "Reference Python implementation of the Factlet Protocol (v0.1 base + v0.2 RFCs 0002/0003/0004/0005). v0.2.1: validation hardening — range checks, identifier validators, max-depth, register_profile API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Factlet Protocol contributors" }
]
keywords = ["ai", "llm", "grounding", "factbook", "factlet-protocol"]
dependencies = [
  "pyyaml>=6.0"
]

[project.urls]
Homepage = "https://factlet.ai"
Repository = "https://github.com/factlet-ai/reference-sdk"
Specification = "https://github.com/factlet-ai/spec"

[project.optional-dependencies]
dev = [
  "pytest>=7.0"
]

[tool.hatch.build.targets.wheel]
packages = ["factlet"]
